java 9 doesn't support javax.xml.bind.DatatypeConverter out of the box; adding java.util.Base64 as preferred implementation which is available from java 8+